# spebt

./: .gitignore  LICENSE  README.md
ray-tracing/test1/: CMakeLists.txt
ray-tracing/test1/.cache/clangd/index/: helper.hpp.7575CD18A774F0CA.idx  kernel_functions.cu.49204D7CD3BF499D.idx  kernel_functions.h.3E9181E9E31D52D7.idx  main.cpp.996E3E049F26AC0E.idx  main.cpp.A14B76A39332F739.idx
ray-tracing/test1/include/: helper.hpp
ray-tracing/test1/python/: plotDetector.py  readData.py
ray-tracing/test1/src/: helper.cpp  main.cpp
ray-tracing/test2_cuda/: CMakeLists.txt  config.yml
ray-tracing/test2_cuda/.cache/clangd/index/: kernel_functions.h.373DCC8AE11EC4B8.idx  main.cpp.10412C3A1818737F.idx
ray-tracing/test2_cuda/include/: kernel_functions.h
ray-tracing/test2_cuda/src/: kernel_functions.cu  main.cpp
ray-tracing/test3/: CMakeLists.txt  config2.yml
ray-tracing/test3/.cache/clangd/index/: helper.hpp.3F8ABE9F3EB2A690.idx  kernel_functions.cu.F18A3D375D1CF3F3.idx
ray-tracing/test3/include/: kernel_functions.h
ray-tracing/test3/python/: verification.py
ray-tracing/test3/src/: kernel_functions.cu
ray-tracing/test4/: config2.yml
ray-tracing/test4/.cache/clangd/index/: helper.cpp.E39AD1C71C5F8FAB.idx
ray-tracing/test4/src/: kernel_functions.cu  main.cpp
ray-tracing/test5/: CMakeLists.txt  config2.yml
ray-tracing/test5/include/: kernel_functions.h
ray-tracing/test5/src/: helper.cpp  kernel_functions.cu
ray-tracing/test6/: CMakeLists.txt  config.yml
ray-tracing/test6/include/: helper.hpp  kernel_functions.h
ray-tracing/test6/python/: plotDetector.py
ray-tracing/test6/src/: kernel_functions.cu  main.cpp
ray-tracing/vulkan_test/: CMakeLists.txt
ray-tracing/vulkan_test/.cache/clangd/index/: main.cpp.14336CC4F768F974.idx
ray-tracing/vulkan_test/src/: main.cpp
